# avida-rs

./: AGENTS.md  Cargo.toml  DEVELOPMENT.md  FIX_SUMMARY.md  OPTIMIZATIONS.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  index.html  test_evolution.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-wasm.yml
src/: cpu.rs  debug.rs  diagnostics.rs  execute.rs  instruction.rs  lib.rs  main.rs  organism.rs  tasks.rs  ui.rs  world.rs
