[package]
name = "avida-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "avida_rs"
path = "src/lib.rs"

[[bin]]
name = "avida-rs"
path = "src/main.rs"

[[bin]]
name = "debug_test"
path = "src/bin/debug_test.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"
