[package]
name = "avida-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "avida_rs"
path = "src/lib.rs"

[[bin]]
name = "avida-rs"
path = "src/main.rs"

[[bin]]
name = "debug_test"
path = "src/bin/debug_test.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wasmtime"] }
egui = "0.29"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
